[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = hwrt

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

version = 0.2.1

description = Handwriting Recognition Tools
long_description = file: README.md
long_description_content_type = text/markdown
keywords = HWRT, recognition, handwriting, on-line

platforms = Linux, MacOS X, Windows

url = https://github.com/MartinThoma/hwrt
download_url = https://github.com/MartinThoma/hwrt

license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 7 - Inactive
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Utilities

[options]
zip_safe = false
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    hwrt = hwrt.cli:entry_point

[upload_docs]
upload-dir = docs/_build/html

[tool:pytest]
addopts = --doctest-modules --cov=./hwrt --cov-append --cov-report html:tests/reports/coverage-html --cov-report term-missing --ignore=docs/ --durations=3
doctest_encoding = utf-8
mccabe-complexity=10
ignore = hwrt/datasets/

[pydocstyle]
match_dir = hwrt
ignore = D104, D413, D212, D100

[flake8]
max-complexity=28
max_line_length = 88
exclude = tests/*,.tox/*,.nox/*,docs/*
extend-ignore = E203,E501,E231,E741,N806,N803,N802,SIM113,SIM106,SIM110

[mypy]
ignore_missing_imports = True
